--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,2 @@
-ATLAS_URL=mongodb+srv://benja:Bm208311464@cluster0.u106otd.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URL=mongodb+srv://nagat1700:nagat55nagat@marketdb.ybxud7v.mongodb.net/multiMarketDB?retryWrites=true&w=majority
 PORT=8080
