--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
     "@leecheuk/react-google-login": "^5.4.1",
     "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@stripe/react-stripe-js": "^1.16.1",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "country-city": "^1.0.0",
     "axios": "^1.2.1",
+    "country-city": "^1.0.0",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
     "js-cookie": "^3.0.1",
@@ -25,6 +27,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
+    "stripe": "^11.4.0",
     "translate": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
