--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "country-city": "^1.0.0",
+    "firebase": "^9.15.0",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
     "js-cookie": "^3.0.1",
